Fix SVG in scroll effect on side and list of shapes on Safari

--- a/src/components/shape-divider-control/editor.scss
+++ b/src/components/shape-divider-control/editor.scss
@@ -24,6 +24,9 @@ body.maxi-blocks--active.maxi-blocks--accessibility .maxi-sidebar {
 		.maxi-button-group-control__option {
 			width: 100%;
 
+			svg {
+				width: 100% !important;
+			}
 			&:focus,
 			&--selected {
 				border: none;
